--- a/Intento 2.html
+++ b/Intento 2.html
@@ -1,5 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+    <title>Pagina 2</title>
+    <style>
+      div {width: 100px;
+      float: left;
+     }
+    div.cabecera{
+        background-color: hotpink;
+        border: 1px solid black;
+        width: 100px;
+    }
+    div.menu{
+        background-color: burlywood;
+        border: 1px cadetblue;
+        width: 100px;
+    }
+    div.principal{
+        background-color: darkslategray;
+        border:50px gold;
+        width: 100px;
+    }   
+    </style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,16 +28,16 @@
     <title>Document</title>
 </head>
 <body>
-    <div style="float: left; background-color: red;border: dashed; ">
+    <div class="cabecera">
 <h1>Esto es una cosa</h1>
 <p>Esta es una cosa roja</p>
     </div>
-    <div style="float: left; background-color: seagreen;border: dotted; ">
+    <div class="menu">
         <h1>Esta es una cosa</h1>
         <p>Esta es una cosa verde</p>
     </div>
-    <div style="float: left; background-color:goldenrod;border: groove; ">
-<h1>Esto es...</h1>
+    <div class="principal">
+<h1>Esto es... </h1>
 <p>REQUIEM</p>
 
     </div>
